# cargo-warehouse

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  readme.md  test_script.rs
src/: main.rs  parse.rs  single_file_example.rs  test.rs
