[package]
name = "cargo-warehouse"
description = "A simple cargo script for set up a local cache for compiled dependencies"
repository = "https://github.com/Nichokas/cargo-warehouse/"
readme = "readme.md"
license = "MIT"
version = "2.3.0"
edition = "2024"


[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
dirs = "6.0.0"
regex = "1.11.1"
tempfile = "3.19.1"
xshell = "0.2.7"

[target.'cfg(windows)'.dependencies]
windows-elevate = "0.1.0"
junction = "1.2.0"

[target.'cfg(unix)'.dependencies]
permissions = "0.5.1"
sudo = "0.6.0"
